# campaign-scanner

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.planning/: STATE.md
.planning/phases/00-phase-template/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/01-project-bootstrap/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/02-campaign-schema-and-normalization/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/03-vpoint-public-list-scraping/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/04-sqlite-persistence-and-deduplication/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/05-json-export-and-summary/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/06-detail-page-extraction-and-screenshots/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/07-additional-public-sources/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/07-review-ready-exports/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/08-llm-fact-extraction/: PHASE-PLAN.md  PHASE-UAT.md
.planning/phases/09-conservative-campaign-labeling/: PHASE-PLAN.md  PHASE-UAT.md
src/vpoint_scanner/: __init__.py  cli.py  config.py  db.py  export.py  extract.py  logging.py  models.py  normalize.py  schemas.py
src/vpoint_scanner/sources/: base.py  (+2 more)
tests/: test_campaign_card_parser.py  test_campaign_detail_parser.py  test_cli.py  test_config.py  test_db.py  test_detail_enrichment.py  test_export.py  test_extract.py  test_normalize.py  test_schemas.py  test_security.py  test_vpoint_public_source.py
tests/fixtures/: vpoint_campaign_detail.html  vpoint_campaign_list.html  vpoint_campaign_list_bad_metadata.html
(+5 files in other folders)
